@@ -538,6 +538,7 @@ Localization
         #LOC_BDArmory_StrafingSpeed = Strafing Speed
         #LOC_BDArmory_IdleSpeed = Idle Speed
         #LOC_BDArmory_ABPriority = Afterburner Priority
+        #LOC_BDArmory_ABOverrideThreshold = Afterburner Override Threshold
 
         #LOC_BDArmory_MaxDrift = Max drift
 
@@ -624,6 +625,7 @@ Localization
         #LOC_BDArmory_AIWindow_atkSpeed = Ground attack speed
         #LOC_BDArmory_AIWindow_idleSpeed = Non-combat cruise speed
         #LOC_BDArmory_AIWindow_ABPriority = Afterburner priority
+        #LOC_BDArmory_AIWindow_ABOverrideThreshold_Context = Afterburner override threshold
         #LOC_BDArmory_AIWindow_LSSL = Limits control below low speed limit
         #LOC_BDArmory_AIWindow_LSLS = AI uses Low-Speed Limiter below this
         #LOC_BDArmory_AIWindow_HSSL = Limits control above low speed limit
@@ -667,6 +669,7 @@ Localization
         #LOC_BDArmory_AIWindow_PIDAutoTuningFixedP = A-T Fixed P
         #LOC_BDArmory_AIWindow_PIDAutoTuningClampMaximums = A-T Clamp Max
         #LOC_BDArmory_AIWindow_ControlLimits = Control
+        #LOC_BDArmory_AIWindow_ABOverrideThreshold = Afterburner Override
         #LOC_BDArmory_AIWindow_SteerLimiter = Steer Limiter
         #LOC_BDArmory_AIWindow_LowSpeedSteerLimiter = Low-Speed Limiter
         #LOC_BDArmory_AIWindow_LowSpeedLimiterSpeed = Low Limiter Speed
