@@ -3,6 +3,7 @@
 	- Only spawn SpawnProbe for dead current vessel if spawning is aborted.
 - AI / WM:
 	- Fix AoA limits above 90° not behaving as expected by only limiting the AoA if the limit is below 90°.
+	- Add an Afterburner Override Threshold slider (force AB active below this speed threshold if at full throttle).
 
 v1.5.3.0
 IMPROVEMENTS / FIXES
